@@ -53,8 +53,8 @@ class ItemDropComponentTest {
     assertSame(sword, factoryItem.get());
     assertSame(player, factoryOwner.get());
     assertEquals(1, spawned.size());
-    assertEquals(3.25f, spawned.get(0).getPosition().x, 0.001f);
-    assertEquals(3f, spawned.get(0).getPosition().y, 0.001f);
+    assertEquals(3.25f, spawned.getFirst().getPosition().x, 0.001f);
+    assertEquals(3f, spawned.getFirst().getPosition().y, 0.001f);
   }
 
   @Test
@@ -85,6 +85,54 @@ class ItemDropComponentTest {
     player.create();
 
     assertFalse(dropComponent.dropFirstStack());
+    assertTrue(spawned.isEmpty());
+  }
+
+  @Test
+  void shouldDropGold() {
+    List<Entity> spawned = new ArrayList<>();
+    AtomicReference<Item> factoryItem = new AtomicReference<>();
+    AtomicReference<Entity> factoryOwner = new AtomicReference<>();
+
+    int numGold = 3;
+
+    ItemDropComponent dropComponent =
+        new ItemDropComponent(
+            (item, owner) -> {
+              factoryItem.set(item);
+              factoryOwner.set(owner);
+              return new Entity();
+            },
+            spawned::add);
+
+    Entity player =
+        new Entity().addComponent(new InventoryComponent(numGold, 3)).addComponent(dropComponent);
+    player.setPosition(2f, 3f);
+    player.create();
+
+    InventoryComponent inventory = player.getComponent(InventoryComponent.class);
+
+    assertTrue(dropComponent.dropGold());
+
+    assertFalse(inventory.hasGold(1));
+    assertSame(ItemType.CURRENCY, factoryItem.get().getItemType());
+    assertEquals(numGold, factoryItem.get().getQuantity());
+    assertSame(player, factoryOwner.get());
+    assertEquals(1, spawned.size());
+    assertEquals(3.25f, spawned.getFirst().getPosition().x, 0.001f);
+    assertEquals(3f, spawned.getFirst().getPosition().y, 0.001f);
+  }
+
+  @Test
+  void shouldNotDropZeroGold() {
+    List<Entity> spawned = new ArrayList<>();
+    ItemDropComponent dropComponent =
+        new ItemDropComponent((item, owner) -> new Entity(), spawned::add);
+    Entity player =
+        new Entity().addComponent(new InventoryComponent(0, 2)).addComponent(dropComponent);
+    player.create();
+
+    assertFalse(dropComponent.dropGold());
     assertTrue(spawned.isEmpty());
   }
 }
